@@ -1,16 +1,25 @@
 package com.example.milky_way_back.article.controller;
 
-import com.example.milky_way_back.article.DTO.AddArticle;
-import com.example.milky_way_back.article.DTO.ArticleListView;
-import com.example.milky_way_back.article.DTO.ArticleViewResponse;
+import com.example.milky_way_back.member.Repository.MemberRepository;
+import com.example.milky_way_back.article.DTO.request.AddArticle;
+import com.example.milky_way_back.article.DTO.response.ArticleListView;
+import com.example.milky_way_back.article.DTO.response.ArticleViewResponse;
 import com.example.milky_way_back.article.entity.Article;
+import com.example.milky_way_back.article.exception.UnauthorizedException;
 import com.example.milky_way_back.article.service.ArticleService;
+import com.example.milky_way_back.member.Repository.MemberRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.annotation.AuthenticationPrincipal;
+import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.web.bind.annotation.*;
 
+import javax.servlet.http.HttpServletRequest;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -18,31 +27,59 @@ import java.util.stream.Collectors;
 @RestController //http 응답으로 객체 데이터를 json 형태로 변환
 public class ArticleApiController {
     private final ArticleService articleService;
-
-    @PostMapping("/posts/edit") // method가 post형식의 /api/boards/ 요청이 들어오면 실행
-    public ResponseEntity<Article> addBoard(@RequestBody AddArticle request){
-        System.out.println(request.getArticleType());
-        System.out.println(request.getTitle());
-        System.out.println(request.getMentorTag());
-        System.out.println(request.getUserNo());
-        System.out.println(request.getApply());
-        System.out.println(request.getEndDay());
-        System.out.println(request.getUserNo());
-        System.out.println(request.getContent());
-        Article savedBoard = articleService.save(request);
-        return ResponseEntity.status(HttpStatus.CREATED).body(savedBoard);
+    private final MemberRepository memberRepository;
+@PostMapping("/posts/write")
+public ResponseEntity<Article> addBoard(@AuthenticationPrincipal UserDetails userDetails,
+                                        @RequestBody AddArticle addArticle,
+                                        HttpServletRequest request) {
+    if (userDetails == null) {
+        // 사용자가 인증되지 않은 경우
+        throw new UnauthorizedException("사용자가 인증되지 않았습니다.");
     }
+    // Jwt 토큰에서 회원 정보를 가져옴
+    String accessToken = extractTokenFromRequest(request);
+    if (accessToken == null) {
+        throw new UnauthorizedException("토큰이 유효하지 않습니다.");
+    }
+    // 회원 정보를 사용하여 게시글 저장
+    Article savedArticle = articleService.save(addArticle);
+    return ResponseEntity.status(HttpStatus.CREATED).body(savedArticle);
+}
+    //http://localhost:8080/posts/list?page=1&size=30
+    //http://localhost:8080/posts/list?page={page-id}&size={size-id}
+    //기본값
+    @GetMapping("/posts/list")
+    public ResponseEntity<Page<ArticleListView>> getArticles(
+            @AuthenticationPrincipal UserDetails userDetails,
+            HttpServletRequest request,
+            @RequestParam(value = "page", defaultValue = "0") int page,
+            @RequestParam(value = "size", defaultValue = "10") int size) {
+        if (userDetails == null) {
+            // 사용자가 인증되지 않은 경우
+            throw new UnauthorizedException("사용자가 인증되지 않았습니다.");
+        }
+        // Jwt 토큰에서 회원 정보를 가져옴
+        String accessToken = extractTokenFromRequest(request);
+        if (accessToken == null) {
+            throw new UnauthorizedException("토큰이 유효하지 않습니다.");
+        }
 
-    @GetMapping("/posts?page={number}&size={data count}&sort={column}")
-    public ResponseEntity<List<ArticleListView>> findAllBoards(){
-        List<ArticleListView> articles = articleService.findAll(Pageable.unpaged()).stream().map(ArticleListView::new).collect(Collectors.toList());
-        //List<ArticleListView> articles = articleService.findAll(Pageable.unpaged()).stream().map(ArticleListView::new).toList();
-        //자바 16이상
-        return ResponseEntity.ok().body(articles);
+        Pageable pageable = PageRequest.of(page, size);
+        Page<Article> articlePage = articleService.findAll(pageable);
+
+        List<ArticleListView> articles = articlePage.getContent()
+                .stream()
+                .map(ArticleListView::new)
+                .collect(Collectors.toList());
+
+        Page<ArticleListView> articleListViewPage = new PageImpl<>(articles, pageable, articlePage.getTotalElements());
+
+        return ResponseEntity.ok(articleListViewPage);
     }
 
     @GetMapping("/posts/{id}")
-    public ResponseEntity<ArticleViewResponse> findBoard(@PathVariable long id){
+    public ResponseEntity<ArticleViewResponse> findBoard(@PathVariable long id
+    ){
         Article article = articleService.findById(id);
         return ResponseEntity.ok().body(new ArticleViewResponse(article));
     }
@@ -53,10 +90,19 @@ public class ArticleApiController {
         articleService.delete(id);
         return ResponseEntity.ok().build();
     }
-    //UPDATE
-//    @PutMapping("/api/boards/{id}")
-//    public ResponseEntity<Article> updateArticle(@PathVariable long id, @RequestBody UpdateRequest request) {
-//        Board updatedBoard = boardService.update(id, request);
-//        return ResponseEntity.ok().body(updatedBoard);
-//    } 수정 넣을건가요?
+
+    @PutMapping("/posts/done/{id}")
+    public ResponseEntity<ArticleViewResponse> updateRecruit(@PathVariable long id) {
+        Article updatedArticle = articleService.updateRecruit(id);
+        return ResponseEntity.ok().body(new ArticleViewResponse(updatedArticle));
+    }
+    // HttpServletRequest에서 JWT 토큰 추출하는 메서드
+    private String extractTokenFromRequest(HttpServletRequest request) {
+        final String authorizationHeader = request.getHeader("Authorization");
+
+        if (authorizationHeader != null && authorizationHeader.startsWith("Bearer ")) {
+            return authorizationHeader.substring(7); // "Bearer " 이후의 토큰 부분 추출
+        }
+        return null;
+    }
 }
